# solana-multisig

./: PROJECT_DESCRIPTION.md
anchor_project/multisig-wallet/: Anchor.toml  package-lock.json
anchor_project/multisig-wallet/programs/multisig-wallet/: Cargo.toml
anchor_project/multisig-wallet/programs/multisig-wallet/src/: constants.rs  errors.rs  lib.rs  state.rs
anchor_project/multisig-wallet/programs/multisig-wallet/src/instructions/: approve_transaction.rs  cancel_transaction.rs  create_wallet.rs  execute_transaction.rs  mod.rs  propose_transaction.rs
anchor_project/multisig-wallet/tests/: multisig-wallet.ts
frontend/multisig-frontend/: README.md  package-lock.json  package.json
frontend/multisig-frontend/assets/: idl.json
frontend/multisig-frontend/src/app/: layout.tsx
frontend/multisig-frontend/src/components/: app-header.tsx
frontend/multisig-frontend/src/components/dashboard/: dashboard-feature.tsx
frontend/my-multisig-app/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend/my-multisig-app/src/app/: layout.tsx
frontend/my-multisig-app/src/components/: app-header.tsx  app-hero.tsx
frontend/my-multisig-app/src/components/dashboard/: dashboard-feature.tsx
frontend/my-multisig-app/src/components/solana/: solana-provider.tsx
frontend/my-multisig-app/src/types/: multisig_wallet.ts
