[package]
name = "multisig-wallet"
version = "0.1.0"
description = "A secure multisig wallet on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig_wallet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"